--- a/Vishal_Khetmalis/Docker/DB/Dockerfile
+++ b/Vishal_Khetmalis/Docker/DB/Dockerfile
@@ -1,4 +1,6 @@
 FROM python
 WORKDIR /D:/Vishal/Professional/Infobell IT/Infobell-Openshift-Daily-Work/Vishal_Khetmalis/Docker/DB
 COPY python_to_postgres.py ./
+COPY requirements.txt ./
+RUN pip install -r requirements.txt
 CMD ["python","./python_to_postgres.py"]
