--- a/Final_Assignments/Docker/Dockerfile
+++ b/Final_Assignments/Docker/Dockerfile
@@ -4,5 +4,5 @@ RUN cd work1
 COPY V1.txt V1.txt 
 RUN pip install -r V1.txt
 WORKDIR /work1
-ADD app.py .
+ADD Connection.py .
 CMD [ "python3", "-m" , "flask", "run", "--host=0.0.0.0"]
