--- a/Vishal_Khetmalis/Docker/docker-compose.yml
+++ b/Vishal_Khetmalis/Docker/docker-compose.yml
@@ -1,16 +1,56 @@
-version: "4"
+version: "3.8"
 services:
-    App:
-        build:./App
-        ports:
-            - "5432"
-    DB:
-        build : ./DB
-        ports:
-            -8080:8080
-        enviroment:
-            DB_hostname = 'localhost'
-            POSTGRES_DB = 'restaurants'
-            POSTGRES_USER = 'postgres'
-            POSTGRES_PASSWORD = 'postgress'
-        restart : always
+  postgres:
+    build: 
+      context: .          
+    container_name: postgres
+    image: vishalkhetmalis:postgres
+    #image : server/db:postgres
+    restart: always
+    environment:
+      POSTGRES_USER: postgres
+      #POSTGRES_PASSWORD: 1234567890
+      POSTGRES_PASSWORD: postgress
+      # Optional: Give a name to the database, otherwise
+      # use the default value POSTGRES_USER as a database name (user in this case.)
+      POSTGRES_DB: restaurants
+
+  python:
+    build: ./
+    image: vishalkhetmalis:python
+    container_name: python
+    #command: python bulkload.py
+    
+    ports:
+      - 8500:8501
+    volumes:
+    
+      - ./:/app
+    #networks:
+     # - app-network'''
+    depends_on:
+      - "postgres"
+    restart: always
+
+
+# version: "4"
+# services:
+#     app:
+#         #container_name: myapp
+#         depends_on:
+#             - localhost
+#         restart: always
+#         build: ./
+#         ports:
+#             - "8500:8501"
+        
+#     localhost:
+#         #container_name: mydb
+#         image: postgres
+#         ports:
+#             - 5432:5432
+#         restart: always
+#         environment:   
+#           POSTGRES_USER: postgres
+#           POSTGRES_PASSWORD: postgress
+#           POSTGRES_DB: restaurant
